fix channels scrollbar browser compatibility

--- a/src/styles/part/mineral-channels.module.css
+++ b/src/styles/part/mineral-channels.module.css
@@ -17,10 +17,13 @@
 
 .content::-webkit-scrollbar {
     height: 7px;
+    width: 7px;
 }
 
 .content::-webkit-scrollbar-track {
     background-color: #2b2b2b;
+    height: 7px;
+    width: 7px;
 }
 
 .content::-webkit-scrollbar-thumb {
@@ -44,12 +47,20 @@
 }
 
 .bottom-labels {
+    position: absolute;
+    top: calc(100% - 30px);
     display: flex;
-    grid-area: bottom-label;
-    position: relative;
-    width: 100%;
-    height: 100%;
+    width: fit-content;
+    height: 30px;
     background-color: #2B2B2B;
+}
+
+@-moz-document url-prefix() {
+  .bottom-labels {
+    top: calc(100% - 37px);
+    height: 37px;
+    padding-bottom: 7px;
+  }
 }
 
 .top-label, .bottom-label {
